fix openwall sharing links z-index

--- a/css/coscup.css
+++ b/css/coscup.css
@@ -135,6 +135,7 @@
   right: 0;
   top: 0;
   color: white;
+  z-index: 99;
 }
 
 #openwall #sharing li {
